# medicalassisstant

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle  local.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: medical_facts.db  vectors_index.json
app/src/main/cpp/: CMakeLists.txt  cpu_affinity.cpp  cpu_affinity.h  llama_jni.cpp
app/src/main/cpp/llama.cpp/conversion/: step3.py
app/src/main/cpp/llama.cpp/examples/llama.android/app/src/main/java/com/example/llama/: MainActivity.kt
app/src/main/java/com/medrag/offline/: MainViewModel.kt  MedicalRagApplication.kt
app/src/main/java/com/medrag/offline/embedding/: EmbeddingEngine.kt  WordPieceTokenizer.kt
app/src/main/java/com/medrag/offline/llm/: LlamaBridge.kt
app/src/main/java/com/medrag/offline/pipeline/: EmergencyTriageGuard.kt  PromptBuilder.kt  RagPipeline.kt  ResponseValidator.kt
app/src/main/java/com/medrag/offline/retrieval/: FactDatabase.kt  VectorSearchEngine.kt
app/src/main/java/com/medrag/offline/util/: AssetExtractor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
